--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,7 +11,7 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <div th:unless="${jobs} and ${jobs.size()}">
-        <h2>No Results</h2>
+        <h3>0 Result(s)</h3>
     </div>
 
     <div th:fragment="jobs-list">
